Name:           HMType
Version:        0.1
License:        BSD3
Author:         Iavor S. Diatchki
Maintainer:     iavor.diatchki@gmail.com
Build-Depends:
  base < 5,
  containers,
  prettyclass
Build-type:     Simple
Exposed-modules:
  HMType.AST
  HMType.Sort
  HMType.Example.Haskell
  HMType.Example.Bits
GHC-options:    -O2 -Wall
Extensions:
  MultiParamTypeClasses
  FlexibleInstances
  FunctionalDependencies
  UndecidableInstances

