Name:           HMType
Version:        0.1
License:        BSD3
Author:         Iavor S. Diatchki
Maintainer:     iavor.diatchki@gmail.com
Build-type:     Simple

Build-Depends:
  base < 5,
  containers,
  pretty,
  monadLib
Exposed-modules:
  HM.Type.AST
  HM.Type.Subst
  HM.Type.Pretty
  HM.Infer.Env
  HM.Infer.Error
  HM.Infer.Monad
GHC-options:    -O2 -Wall

